--- a/cmd/otel-allocator/internal/server/templates/page_header.html
+++ b/cmd/otel-allocator/internal/server/templates/page_header.html
@@ -9,8 +9,8 @@
 <nav>
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/scrape_configs">Scrape Configs</a></li>
-        <li><a href="/jobs">Jobs</a></li>
-        <li><a href="/targets">Targets</a></li>
+        <li><a href="/debug/scrape_configs">Scrape Configs</a></li>
+        <li><a href="/debug/jobs">Jobs</a></li>
+        <li><a href="/debug/targets">Targets</a></li>
     </ul>
 </nav>
